Poor man's logging, retry 429 on collection create

--- a/example/package.yaml
+++ b/example/package.yaml
@@ -65,6 +65,8 @@ tests:
       - HUnit
       - wreq
     ghc-options:
+      - -fno-warn-type-defaults
+      - -fno-warn-orphans 
       - -fno-warn-missing-fields
       - -threaded
       - -with-rtsopts=-N
