--- a/example/package.yaml
+++ b/example/package.yaml
@@ -19,12 +19,12 @@ dependencies:
   - base >= 4.10.1
   - aeson
   - cdb
+  - http-client
   - http-types
   - lens
   - lens-aeson
   - random
   - text
-  - wreq
 
 default-extensions:
   - DuplicateRecordFields
@@ -64,10 +64,9 @@ tests:
       - lockers
       - hspec
       - HUnit
-      - wreq
     ghc-options:
       - -fno-warn-type-defaults
-      - -fno-warn-orphans 
+      - -fno-warn-orphans
       - -fno-warn-missing-fields
     default-extensions:
       - DuplicateRecordFields
