--- a/package.yaml
+++ b/package.yaml
@@ -50,17 +50,16 @@ library:
     - vector
   exposed-modules:
     - Network.CosmosDB
-    - Network.CosmosDB.Types
-    - Network.CosmosDB.Model.Collection
-    - Network.CosmosDB.Model.Database
-    - Network.CosmosDB.Model.IndexingPolicy
     - Network.CosmosDB.Auth
-    - Network.CosmosDB.Request
-    - Network.CosmosDB.Retry
     - Network.CosmosDB.Client.Collections
     - Network.CosmosDB.Client.Databases
     - Network.CosmosDB.Client.Documents
-    - Network.CosmosDB.Internal
+    - Network.CosmosDB.Core
+    - Network.CosmosDB.Model.Collection
+    - Network.CosmosDB.Model.Database
+    - Network.CosmosDB.Model.IndexingPolicy
+    - Network.CosmosDB.Request
+    - Network.CosmosDB.Retry
   default-extensions:
     - DefaultSignatures
     - DeriveGeneric
