--- a/cdb.cabal
+++ b/cdb.cabal
@@ -1,10 +1,10 @@
-cabal-version: >= 1.10
+cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.29.7.
+-- This file has been generated from package.yaml by hpack version 0.31.1.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3c3f69d41663b6539808cf44b488e90caa6576a7730da12762273da0ec558659
+-- hash: 8be40cd305c6d03eb5b4cb1c423a06fcf88276bb8dff7cec04dc0861103db99a
 
 name:                cdb
 version:             0.1
